Chapter 17 and 18 correx

--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -13,18 +13,18 @@ contributor:
     sort_as: "1"
   - first_name: "Ana"
     last_name: "Macarrón"
-    title: "Conservation Professor, Faculty of Fine Art (retired)"
+    title: "Conservation Professor (retired), Faculty of Fine Art"
     affiliation: "Complutense University of Madrid"
     sort_as: "2"
   - first_name: "Rita"
     last_name: "Gil"
     title: "Conservator"
-    affiliation: "National Museum of Natural Science (MNCN-CSIC) and in private practice"
+    affiliation: "National Museum of Natural Science (MNCN-CSIC) and in private practice, Madrid"
     sort_as: "3"
   - first_name: "Julia"
     last_name: "Betancor"
-    title: "Associate Director, Conservation and Research"
-    affiliation: "SOLO Collection of Contemporary Art"
+    title: "Principal Conservator, JB Art C&R, and Head Art Conservator, Colección"
+    affiliation: "SOLO, Madrid"
     sort_as: "4"
 keywords: "lining, gacha, glue-paste, adhesive, documentation, experimentation"
 abstract: "A research project was carried out between 2011 and 2015 at the Complutense University of Madrid, the aim of which was to suggest improvements to guarantee future conservation of canvases lined with a glue-paste adhesive called *gacha*. We started with three objectives: documenting the origin of recipes and the different methods used for this treatment in Spain and Europe, as there is still little knowledge about this kind of lining; choosing case studies; and finally, carrying out a series of experimental tests to evaluate the performance of the basic materials in the recipes and of some variants in the textiles often used as lining supports."
@@ -34,25 +34,25 @@ abstract: "A research project was carried out between 2011 and 2015 at the Compl
 
 The proposal to carry out a research project on glue-paste linings arose during a course on structural treatments of paintings on canvas led by Vishwa Mehra and Matteo Rossi-Doria at the Universitat Politècnica de València. The scarcity of scientific knowledge about linings carried out in the past with glue paste (in Spanish, traditionally called *a la gacha*) was exacerbated by the gradual abandoning of this procedure, now replaced by modern synthetic adhesives.
 
-The project—entitled Materials and Methods of Glue-Paste Linings for the Reinforcement of Canvas Paintings: Documentation, Functionality, and Conservation—was a coordinated effort, carried out between 2011 and 2015 by a group of sixteen international specialists, a number of Spanish institutions, and the support of several companies.[^1] It was coordinated from Spain by the Complutense University of Madrid and funded by a grant[^2] from the Ministerio de Economía y Competitividad (MINECO).
+The project—titled Materials and Methods of Glue-Paste Linings for the Reinforcement of Canvas Paintings: Documentation, Functionality, and Conservation—was a coordinated effort carried out between 2011 and 2015 by a group of sixteen international specialists, a number of Spanish institutions, and the support of several companies.[^1] It was coordinated from Spain by the Complutense University of Madrid and funded by a grant[^2] from the Ministerio de Economía y Competitividad (MINECO).
 
 ## The Need for Lining Through the Ages
 
-It is evident that lining has allowed many paintings on canvas to survive into the present. Some linings are as much as three hundred years old. In Spain and most of the rest of Europe, linings were carried out since the seventeenth century on using linen cloth and glue-paste as an adhesive ([fig. 18.1](#fig-18-1)). This procedure remained in practice until the 1990s, when synthetic adhesives came to prevail in the field of conservation. Especially in Holland and the humid Atlantic countries, glue paste was often replaced by wax resin from the nineteenth to early twentieth centuries.
+It is evident that lining has allowed many paintings on canvas to survive into the present. Some linings are as much as three hundred years old. In Spain and most of the rest of Europe, linings were carried out since the seventeenth century on using linen cloth and glue paste as an adhesive ([fig. 18.1](#fig-18-1)). This procedure remained in practice until the 1990s, when synthetic adhesives came to prevail in the field of conservation. Especially in Holland and the humid Atlantic countries, glue paste was often replaced by wax resin from the nineteenth to the early twentieth century.
 
 {% figure 'fig-18-1' %}
 
-In Spain, it was not only the passing of time and the lack of care that caused the poor condition of the works, but also the historical vicissitudes of the country, some of which, we now know, led to the need for numerous treatments to the paintings’ supports. For example, on Christmas Eve in 1734, a fire broke out in the Real Alcázar de Madrid, which housed the royal collections, many of which are now in the Museo del Prado. Many paintings burned, and others were in such a bad state that they had to be cut into pieces—and as a result many canvases were lined. Juan García de Miranda and Andrés de la Calleja were the first court painters put in charge of restorations. Their inventories recount the works saved, for example, Titian’s *Charles V at the Battle of Mühlberg*, which they identified as being in very bad condition ({% cite 'Barreno Sevillano 1980' %}).
+In Spain, it was not only the passing of time and the lack of care that caused the poor condition of the works but also the historical vicissitudes of the country, some of which, we now know, led to the need for numerous treatments to the paintings’ supports. For example, on Christmas Eve in 1734, a fire broke out in the Real Alcázar de Madrid, which housed the royal collections, many of which are now in the Museo del Prado. Many paintings burned, and others were in such a bad state that they had to be cut into pieces—and as a result many canvases were lined. Juan García de Miranda and Andrés de la Calleja were the first court painters put in charge of restorations. Their inventories recount the works saved, for example, Titian’s *Charles V at the Battle of Mühlberg*, which they identified as being in very bad condition ({% cite 'Barreno Sevillano 1980' %}).
 
-Between 1808 and 1814, during the Napoleonic Wars, many works were taken to Paris from different parts of Spain (Cádiz, Sevilla, Madrid) and arrived in terrible condition. Before being returned to Spain, some canvases were treated with linings in France, such as *Juan the Patrician’s Dream* by Murillo. Similarly, some paintings on panels were transferred to canvas, including among others, Raphael’s *Christ Falls on the Way to Calvary*, also known as *El Pasmo de Sicilia* ({% cite 'González Mozo and Alonso 2011' %}).
+Between 1808 and 1814, during the Napoleonic Wars, many works were taken to Paris from different parts of Spain (Cádiz, Sevilla, Madrid) and arrived in terrible condition. Before being returned to Spain, some canvases were treated with linings in France, such as *Juan the Patrician’s Dream* by Murillo. Similarly, some paintings on panels were transferred to canvas, including, among others, Raphael’s *Christ Falls on the Way to Calvary*, also known as *El Pasmo de Sicilia* ({% cite 'González Mozo and Alonso 2011' %}).
 
-During the Spanish Civil War (1936–39), the great works of art at the Museo del Prado and other areas on the front line were evacuated to avoid damage during the fighting. Despite the care with which they were packed and transported, incidents occurred that caused some canvases to tear, and they were later lined; these include Goya’s *The 2nd of May 1808 in Madrid,* also known as *La carga de los mamelucos.*
+During the Spanish Civil War (1936–39), the great works of art at the Museo del Prado and other areas on the front line were evacuated to avoid damage during the fighting. Despite the care with which they were packed and transported, incidents occurred that caused some canvases to tear, and they were later lined; these include Goya’s *The 2nd of May 1808 in Madrid*, also known as *La carga de los mamelucos.*
 
-In 1828, the Sala de Restauración at the Museo del Prado was created by royal decree. Official posts of liners were set up and filled by competitive examination. The fact that there were professional specialists in lining shows that this kind of treatment was frequently being carried out. We can therefore count on a huge quantity of works lined with glue-paste in Spain, many of which are very well preserved. For example, of the forty-nine Velazquez paintings studied in the Museo del Prado, only seven (about 14%) had not been lined, and of the paintings attributed to El Greco, fifty-one were studied and only six had not been lined (about 11.7%). If we apply an average percentage of 13% to the 6,367 paintings on canvas held by the Museo del Prado at the end of 2019, we can hypothesize that more than eight hundred have not been lined, and more than five thousand could have been lined.[^3] These numbers lead us to reflect on the durability of these linings and the future conservation of all those works: which conservation conditions are the most appropriate for their preservation, and what should be done when the adhesives start aging and failing?
+In 1828, the Sala de Restauración at the Museo del Prado was created by royal decree. Official posts for liners were set up and filled by competitive examination. The fact that there were professional specialists in lining shows that this kind of treatment was frequently being carried out. We can therefore count on a huge quantity of works lined with glue paste in Spain, many of which are very well preserved. For example, of the forty-nine Velázquez paintings studied in the Museo del Prado, only seven (about 14%) had not been lined, and of the paintings attributed to El Greco, fifty-one were studied and only six had not been lined (about 11.7%).[^3] If we apply an average percentage of 13% to the 6,367 paintings on canvas held by the Museo del Prado at the end of 2019, we can hypothesize that more than eight hundred have not been lined, and more than five thousand could have been lined. These numbers lead us to reflect on the durability of these linings and the future conservation of all those works: Which conservation conditions are the most appropriate for their preservation, and what should be done when the adhesives start aging and failing?
 
 ## Developing the Project
 
-Among the aims of the project was to get a better understanding of the historical glue-paste recipes and methods of applying treatments. We then proposed using a sample recipe and making models and tests that would allow us to determine their possible efficiency and the process of deterioration—that is, to study and verify the present suitability of a reinforcement treatment that evolved over more than three hundred years in Europe, especially its suitability for paintings that were treated with this adhesive previously. We know that this method presents little toxicity, employs materials similar to and compatible with most paintings on canvas, and is reversible, inexpensive, and sustainable compared with modern synthetic adhesives, which have certain advantages but also disadvantages (some plastic materials need high temperature to activate the adhesive, for example). In addition, we wanted to use the experimental results to suggest improvements and guidelines for preventive conservation and future preservation of paintings lined in this way.
+Among the aims of the project was to get a better understanding of the historical glue-paste recipes and methods of applying treatments. We then proposed using a sample recipe and making models and tests that would allow us to determine their possible efficiency and the process of deterioration—that is, to study and verify the present suitability of a reinforcement treatment that evolved over more than three hundred years in Europe, especially its suitability for paintings that were treated with this adhesive previously. We know that this method presents little toxicity, employs materials similar to and compatible with most paintings on canvas, and is reversible, inexpensive, and sustainable compared with modern synthetic adhesives, which have certain advantages and disadvantages; some plastic materials need high temperature to activate the adhesive, for example. In addition, we wanted to use the experimental results to suggest improvements and guidelines for preventive conservation and future preservation of paintings lined in this way.
 
 The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2-a), [table 18.1](#table-18-1)).
 
@@ -62,21 +62,21 @@ The project was organized in three parts: a documentary work or study, an experi
 
 ## Documentary Stage
 
-For the documentary stage we consulted treatises, archival documents, and various bibliographies and sent questionnaires to various European professionals and institutions. We used two types of questionnaires: one for the cases treated in the more distant past and another for lining treatments carried out in the twentieth century. More than sixty questionnaires were sent, although the amount of information received differed greatly.
+For the documentary stage, we consulted treatises, archival documents, and various bibliographies and sent questionnaires to various European professionals and institutions. We used two types of questionnaires: one for the cases treated in the more distant past and another for lining treatments carried out in the twentieth century. More than sixty questionnaires were sent, although the amount of information received varied greatly.
 
 It was not easy to find all the recipes used. In some cases, old documentary information presented the ingredients in invoices, but it did not detail how they were prepared and applied. Similarly, we met with certain reticence from conservator-restorers when it came to explaining the recipes they were currently using, since many of them were personal variations developed by the professionals themselves.
 
-### The Origin of the Use of *Gacha*, or Glue Paste
+### The Origin of the Use of Gacha, or Glue Paste
 
-Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ({% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
+Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings (  {% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
 
-Through the documents we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
+Through the documents, we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
 
-We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores … But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco (1638) 1990' '481' %}). And Antonio Palomino relates similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey and a little linseed oil ({% cite 'Palomino (1715) 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ({% cite 'Helwig and Daly Hartin 1999' %}).
+We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores . . . But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco [1638] 1990' '481' %}). Antonio Palomino raises similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey, and a little linseed oil ({% cite 'Palomino [1715] 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ({% cite 'Helwig and Daly Hartin 1999' %}).
 
-A treatise by Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ({% cite 'Poleró (1853 and 1866) 2018' %}). He describes the procedure: cover the paint surface with paper, and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back and then iron until it is completely dry. The idea was not to simply reinforce the support, but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
+A treatise by the Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ({% cite 'Poleró [1853 and 1866] 2018' %}). He describes the procedure: cover the paint surface with paper and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back, then iron until it is completely dry. The idea was not simply to reinforce the support but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
 
-Using the information gathered and the results of the questionnaire we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth ([table 18.1](#table-18-1)).
+Using the information gathered and the results of the questionnaire, we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth ([table 18.1](#table-18-1)).
 
 In older recipes for *gacha* paste, such as those of Juan García de Miranda in 1735 ([fig. 18.3](#fig-18-3)), we find flour (the main component of which is starch), honey, walnut oil, and *grasilla* (juniper resin). Among the ingredients of the Poleró recipe we also find garlic, glue, and linseed oil. Later formulas mention molasses, Venetian turpentine, oxgall, vinegar, Italian *colletta*, alum, flax seeds, and phenol. In Spain, wheat flour was typically used, but in France, Italy, and Portugal we find mention of rye flour. The glue used varies from strong or bone glue (called in Spanish carpenter’s glue) to hide or rabbit-skin glue. And more recent recipes add Plextol B 500 as an adhesive and plasticizer.
 
