--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -56,7 +56,7 @@ Among the aims of the project was to get a better understanding of the historica
 
 The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2-a), [table 18.1](#table-18-1)).
 
-{% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '(a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo Nacional del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan,* by Bartolomé Esteban Murillo. (c) Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, (c) Lining Project HAR 2011-24217 and Universidad Politécnica de Valencia.' %}
+{% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '(a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan* (  *Juan the Patrician's Dream*), by Bartolomé Esteban Murillo. (c) Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, (c) Lining Project HAR 2011-24217 and Universidad Politècnica de València.' %}
 
 {% figure 'table-18-1' %}
 
@@ -66,9 +66,9 @@ For the documentary stage, we consulted treatises, archival documents, and vario
 
 It was not easy to find all the recipes used. In some cases, old documentary information presented the ingredients in invoices, but it did not detail how they were prepared and applied. Similarly, we met with certain reticence from conservator-restorers when it came to explaining the recipes they were currently using, since many of them were personal variations developed by the professionals themselves.
 
-### The Origin of the Use of Gacha, or Glue Paste
+### The Origin of the Use of *Gacha*, or Glue Paste
 
-Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings (  {% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
+Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ( {% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
 
 Through the documents, we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
 
@@ -76,9 +76,9 @@ We find the same in Francisco Pacheco’s treatise from the mid-seventeenth cent
 
 A treatise by the Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ({% cite 'Poleró [1853 and 1866] 2018' %}). He describes the procedure: cover the paint surface with paper and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back, then iron until it is completely dry. The idea was not simply to reinforce the support but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
 
-Using the information gathered and the results of the questionnaire, we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth ([table 18.1](#table-18-1)).
+Using the information gathered and the results of the questionnaire, we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth (see [table 18.1](#table-18-1)).
 
-In older recipes for *gacha* paste, such as those of Juan García de Miranda in 1735 ([fig. 18.3](#fig-18-3)), we find flour (the main component of which is starch), honey, walnut oil, and *grasilla* (juniper resin). Among the ingredients of the Poleró recipe we also find garlic, glue, and linseed oil. Later formulas mention molasses, Venetian turpentine, oxgall, vinegar, Italian *colletta*, alum, flax seeds, and phenol. In Spain, wheat flour was typically used, but in France, Italy, and Portugal we find mention of rye flour. The glue used varies from strong or bone glue (called in Spanish carpenter’s glue) to hide or rabbit-skin glue. And more recent recipes add Plextol B 500 as an adhesive and plasticizer.
+In older recipes for *gacha* paste, such as those of Juan García de Miranda in 1735 ([fig. 18.3](#fig-18-3)), we find flour (the main component of which is starch), honey, walnut oil, and *grasilla* (  juniper resin). Among the ingredients of the Poleró recipe we also find garlic, glue, and linseed oil. Later formulas mention molasses, Venetian turpentine, oxgall, vinegar, Italian *colletta*, alum, flax seeds, and phenol. In Spain, wheat flour was typically used, but in France, Italy, and Portugal we find mention of rye flour. The glue used varies from strong or bone glue (called in Spanish what translates to carpenter’s glue) to hide or rabbit-skin glue. More recent recipes add Plextol B 500 as an adhesive and plasticizer.
 
 {% figure 'fig-18-3' %}
 
