--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -56,7 +56,7 @@ Among the aims of the project was to get a better understanding of the historica
 
 The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2-a), [table 18.1](#table-18-1)).
 
-{% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '(a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan* (  *Juan the Patrician's Dream*), by Bartolomé Esteban Murillo. (c) Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, (c) Lining Project HAR 2011-24217 and Universidad Politècnica de València.' %}
+{% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '(a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan* (*Juan the Patrician's Dream*), by Bartolomé Esteban Murillo. c Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, c Lining Project HAR 2011-24217 and Universidad Politècnica de València.' %}
 
 {% figure 'table-18-1' %}
 
@@ -82,7 +82,7 @@ In older recipes for *gacha* paste, such as those of Juan García de Miranda in 
 
 {% figure 'fig-18-3' %}
 
-María Luisa Gómez has noted several characteristics of lining with *gacha* paste ({% cite 'Gómez 1998' %}), for example that “there is no change in color, or only very slight change. Also, that the high moisture content allows for the smoothing out of cracks. However, the mixture is very hygroscopic and sensitive to humidity. There is a risk that the original canvas will shrink. There is a danger of fungal growth. Adhesion reduces rapidly in bad weather conditions, and it becomes hard and fragile. It has an acid pH. It requires the applying of heat.”[^4] She thought that the use of Venetian turpentine and other resins was not justified because they were insoluble in water, darkened, and became more fragile, and therefore suggested simplified recipes made up of only starch and animal glue with a few drops of fungicide, and that they be applied cold and used only for lining in dry climates.
+María Luisa Gómez has noted several characteristics of lining with *gacha* paste ({% cite 'Gómez 1998' %}), for example that “there is no change in color, or only very slight change. Also, that the high moisture content allows for the smoothing out of cracks. However, the mixture is very hygroscopic and sensitive to humidity. There is a risk that the original canvas will shrink. There is a danger of fungal growth. Adhesion reduces rapidly in bad weather conditions, and it becomes hard and fragile. It has an acid pH. It requires the applying of heat.”[^4] She concluded that the use of Venetian turpentine and other resins was not justified because they were insoluble in water, darkened, and became more fragile, and therefore suggested simplified recipes made up of only starch and animal glue with a few drops of fungicide, and that they be applied cold and used only for lining in dry climates.
 
 ### Case Studies
 
@@ -92,7 +92,7 @@ Examples of case studies include:
 
 -   Ribera’s *Crucified Christ*, in the Diputación Foral de Álava.
 
--   Perovani’s *Portrait of George Washington*, in the Real Academia de Bellas Artes de San Fernando in Madrid, which was lined by Tomás Pérez, restorer at the Museo del Prado, in 1955 ([fig. 18.4](#fig-18-4)). For this painting, we also were able to locate the original 1955 gacha recipe, and to examine the state of the lining via cross sections ([fig. 18.5](#fig-18-5-a)).
+-   Perovani’s *Portrait of George Washington*, in the Real Academia de Bellas Artes de San Fernando in Madrid, which was lined by Tomás Pérez, restorer at the Museo del Prado, in 1955 ([fig. 18.4](#fig-18-4)). For this painting, we also were able to locate the original 1955 *gacha* recipe and to examine the state of the lining via cross sections ([fig. 18.5](#fig-18-5-a)).
 
 -   Murillo’s *Juan the Patrician’s Dream*, in the Museo del Prado.[^5]
 
@@ -102,7 +102,7 @@ Examples of case studies include:
 
 {% figuregroup '2' 'fig-18-5-a, fig-18-5-b' '(a) Recipe for *gacha* used in 1955 by Tomás Pérez Alférez, liner at the Museo Nacional del Prado, on the painting shown in fig. 18.4. (b) Cross-section of glue paste lining, corresponding to the left sleeve. Layers from the bottom: (1) glue-paste, (2) ground, (3) black paint. Images: a: Archivo del Museo Nacional del Prado; b and c: Real Academia de Bellas Artes de San Fernando de Madrid (E. Parra, Larco Química y Arte; conservation report: Silvia Viana, Ángeles Solís, and Judit Gasca)' %}
 
-Both of the latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although the painting’s measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or been caused by burns during ironing ({% cite 'Macarrón, Calvo, and Gil 2017' %}).
+The two latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined in 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although its measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or may have been caused by burns during ironing ({% cite 'Macarrón, Calvo, and Gil 2017' %}).
 
 ### Creating the Database
 
@@ -116,41 +116,41 @@ We also collected analyses and studies carried out in the collaborating institut
 
 -   Appendices: records of restorers, work tools, ingredients in the recipes, glossary
 
-The version of the Access software we used allowed us to filter by countries and dates, as well as by the ingredients, tools, and materials used. However, the amount of information gathered in Spain was much larger than that from other European countries taking part in the project. Likewise, the amount and kind of data gathered in the case studies were not comparable due to the different information gleaned: analysis, recipes, methods, and restorers.
+The version of the Access software allowed us to filter by countries and dates, as well as by the ingredients, tools, and materials used. However, the amount of information gathered in Spain was much larger than that from other European countries taking part in the project. Likewise, the amount and kind of data gathered in the case studies were not comparable due to the different information gleaned: analysis, recipes, methods, and restorers.
 
 ## Experimental Stage
 
 Following in the wake of other experimental studies ({% cite 'Daly Hartin et al. 2011' %}), we decided to start a scientific study of the materials of a glue-paste lining, starting with the basic ingredients: flour, glue, and cloth. Thus, a number of tests and mock-ups were carried out to assess the behavior of the lining.
 
-We used an animal glue chosen from previous tests because of its bloom strength of 240–250. Four types of flour with differing protein content were used: two kinds of finely ground white wheat flour (different brands), coarse-ground semi–whole wheat flour, and coarse-ground semi–whole rye flour. Two kinds of linen fabric were also used: open and closed weft.[^6] The adhesive was prepared at the Universitat Politècnica de València, adhesive films were made for analysis, and the linings were carried out. Some of the samples were placed on stretchers and some were not.
+We used an animal glue chosen from previous tests because of its Bloom strength of 240–250. Four types of flour with differing protein content were used: two kinds of finely ground white wheat flour (different brands), coarse-ground semi–whole wheat flour, and coarse-ground semi–whole rye flour. Two kinds of linen fabric were also used: open and closed weft.[^6] The adhesive was prepared at the Universitat Politècnica de València, adhesive films were made for analysis, and the linings were carried out. Some of the samples were placed on stretchers and some were not.
 
-The samples were sent to the Centre Interdiciplinaire de Conservation et de Restauration du Patrimoine (CICRP) in Marseilles for accelerated aging and study of susceptibility to biodeterioration (estimate of mold growth and pest infestation). They were also sent to Valencia (for morphological studies using optical and scanning electron microscope [SEM]), Copenhagen (examination of cross sections of mock-ups with optical microscopy [OM] and tensile and peel tests), and Maastricht (investigation of cracking using reflectance transformation imaging [RTI]). Members of the research team who specialized in the different techniques worked in each of these places. Some of the samples were studied before and after artificial aging: we measured viscosity and pH, used Fourier transform infrared spectroscopy (FTIR) for the characterization of the original materials and lining adhesives, and carried out morphological analysis using OM, SEM, and RTI. We also carried out tests of mechanical traction performance and peeling.
+The samples were sent to the Centre Interdiciplinaire de Conservation et de Restauration du Patrimoine (CICRP) in Marseilles for accelerated aging and study of susceptibility to biodeterioration (estimate of mold growth and pest infestation). They were also sent to Valencia (for morphological studies using optical and scanning electron microscope [SEM]), Copenhagen (examination of cross sections of mock-ups with optical microscopy [OM] and tensile and peel tests), and Maastricht (investigation of cracking using reflectance transformation imaging [RTI]). Members of the research team who specialized in the different techniques worked in each of these places. Some of the samples were studied before and after artificial aging: we measured viscosity and pH, used FTIR for the characterization of the original materials and lining adhesives, and carried out morphological analysis using OM, SEM, and RTI. We also conducted tests of mechanical traction performance and peeling.
 
 The partial results of these tests included chemical characterization, morphological analysis, studies on mechanical behavior, and biodeterioration ({% cite 'Fuster-López et. al 2017' %}).
 
 ## Dissemination
 
-The third phase of the project was to share the work by disseminating it widely so as to familiarize professionals with this kind of canvas lined with glue-paste. The first objectives of the project were shown in the Museo Thyssen-Bornemisza in Madrid, in 2012, along with the state of knowledge on the subject at that time.[^7]
+The third phase of the project was to share the work by disseminating it widely so as to familiarize professionals with this kind of canvas lined with glue paste. The first objectives of the project were shown at the Museo Thyssen-Bornemisza in Madrid in 2012, along with the state of knowledge on the subject at that time.[^7]
 
 In 2012, we also presented a poster to the TechnoHeritage Congress and published some of the documentary work ({% cite 'Macarrón, Calvo, and Gil 2013' %}). The following year, at Lo Stato dell’Arte 11, Matteo Rossi-Doria presented a paper on the critical recovery of traditional lining methods ({% cite 'Rossi-Doria 2013' %}). In a similar context, an article was published comparing the lining systems used in Portugal and Spain ({% cite 'Calvo, Maltieira, and Barbosa 2014' %}).
 
-In 2014, we put forward some case studies in the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ({% cite 'Macarrón, Calvo, and Gil 2014' %}; {% cite 'Macarrón, Calvo, and Gil 2017' %}). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ({% cite 'Macarrón, Calvo, and Gil 2015' %}).
+In 2014, we put forward some case studies at the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ({% cite 'Macarrón, Calvo, and Gil 2014' %}, {% cite 'Macarrón, Calvo, and Gil 2017' '' '2017' %}). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ({% cite 'Macarrón, Calvo, and Gil 2015' %}).
 
-The partial results of the experimental section were presented and published at the ICOM-CC in Copenhagen in 2017 (Fuster-López et. al 2017]]).
+The partial results of the experimental section were presented and published at the ICOM-CC in Copenhagen in 2017 (Fuster-López et al. 2017).
 
-In 2018 we presented a summary of the project at the II Colloquium in Lisbon: Investigación en Conservación del Patrimonio (Heritage Conservation Research) ({% cite 'Macarrón, Calvo, and Gil 2018' %}). More recently, in June 2019, the four authors of this essay organized and taught a workshop at the Complutense University of Madrid, Applications of Traditional and Modern Lining Methods, with the assistance of museum professionals, private practitioners, and students ([fig. 18.6](#fig-18-6)). During the workshop, a wide range of adhesive formulations were tested on facsimiles. Thanks to the Avangrid Foundation grant, Ana Calvo and Julia Betancor were able to present this research during the Conserving Canvas Symposium at Yale University in October 2019.
+In 2018, we presented a summary of the project at the II Colloquium in Lisbon: Investigación en Conservación del Patrimonio (Heritage Conservation Research) ({% cite 'Macarrón, Calvo, and Gil 2018' %}). More recently, in June 2019, the four authors of this essay organized and taught a workshop at the Complutense University of Madrid, titled Applications of Traditional and Modern Lining Methods, with the assistance of museum professionals, private practitioners, and students ([fig. 18.6](#fig-18-6)). During the workshop, a wide range of adhesive formulations was tested on facsimiles. Thanks to the Avangrid Foundation grant, Ana Calvo and Julia Betancor were able to present this research during the Conserving Canvas symposium at Yale University in October 2019.
 
 {% figure 'fig-18-6' %}
 
 ## Conclusions
 
-In certain historic cases, we found linings with glue paste that had changed and completely lost its adhesiveness, which led to its removal. We also found that there are now new alternatives and methodologies for structural treatment of paintings on canvas (such as strip lining, tear mending, and suction tables), but importantly, there are also new criteria as regards structural canvas treatments. This should not, however, justify a loss of understanding and knowledge of linings with glue paste.
+In certain historical cases, we found linings with glue paste that had changed and completely lost the glue paste's adhesiveness, which led to its removal. We also found that there are now new alternatives and methodologies for structural treatment of paintings on canvas (such as strip-lining, tear mending, and suction tables), but importantly, there are also new criteria regarding structural canvas treatments. This should not, however, justify a loss of understanding and knowledge of linings with glue paste.
 
 Thanks to the project described in this essay, we have learned that hundreds of paintings in Spain are lined with glue paste—some three centuries ago and others more recently. Most are in good condition. However, more information is needed about works lined *a la gacha*: the recipes and application methods used and the environmental conditions of conservation.
 
-In experimental studies ({% cite 'Fuster-López et. al 2017' %}) we discovered variables in biodegradation, which depends on the fineness of the flour, the proportions of flour and glue, and the kind of starch and protein when the proportion of flour to glue is constant. *Gacha* recipes with semiwhole flour are more likely to biodeteriorate than those made with finely milled white flours, and the protein content of the cereal used affects the degradation process. Regarding the mechanical and dimensional stability of linings with glue paste, we found differences related to the kind of flour used, the degree of milling or grinding, and the thickness of the weft in the canvas used for lining. This suggests that conservation strategies for the long-term care of lined paintings must be carefully assessed, taking into consideration the kind of flour used in the adhesive.
+In experimental studies ({% cite 'Fuster-López et. al 2017' %}), we discovered variables in biodegradation, which depends on the fineness of the flour, the proportions of flour and glue, and the kind of starch and protein when the proportion of flour to glue is constant. *Gacha* recipes with semiwhole flour are more likely to biodeteriorate than those made with finely milled white flours, and the protein content of the cereal used affects the degradation process. Regarding the mechanical and dimensional stability of linings with glue paste, we found differences related to the kind of flour used, the degree of milling or grinding, and the thickness of the weft in the canvas used for lining. This suggests that conservation strategies for the long-term care of lined paintings must be carefully assessed, taking into consideration the kind of flour used in the adhesive.
 
-It would be useful to continue testing to determine the different additives in the traditional recipes (garlic, oxgall, Venetian turpentine, disinfectants) to understand the role these products played in the lining and their effects. But on the basis of our findings and in the light of the current condition of works lined *a la gacha*, we must raise the following questions:
+It would be useful to continue testing to determine the different additives in the traditional recipes (garlic, oxgall, Venetian turpentine, disinfectants) to understand the role these products played in the lining and their effects. But on the basis of our findings and in light of the current condition of works lined *a la gacha*, we must raise the following questions:
 
 -   Might a version of this adhesive be appropriate nowadays?
 
@@ -168,7 +168,7 @@ It would be useful to continue testing to determine the different additives in t
 
 {% endbackmatter %}
 
-[^1]: The main researcher on the project was Ana Macarrón and the following were part of the team: Ana Calvo, who started out as a member of the School of Arts at the Universidade Católica Portuguesa and then moved on to the Complutense University of Madrid, Spain; Rita Gil, technical support for the project at the UCM and co-author of the database; Laura Fuster, Sofía Vicente and Dolores Yusá from the Universitat Politècnica de València, Spain; Matteo Rossi-Doria, in private practice in Italy; Cecil K. Andersen and Mikkel Scharff from the KADK School of Conservation in Copenhagen, Denmark; Kate Seymour from the Stiching Restauratie Atelier Limburg (SRAL), Maastricht, Netherlands; Nicolas Bouillon and Fabien Forher from the Centre Interdiciplinaire de Conservation et de Restauration du Patrimoine (CICRP) Marseilles, France; Aurelia Chevalier, in private practice in France; Paul Ackroyd from the National Gallery, London; Joan Reifsnayder from ICOM-CC; and Marion Mecklenburg from the Smithsonian Institution. Spanish institutions that took part as contributors are Museo del Prado, Patrimonio Nacional, Museo Thyssen-Bornemisza, Instituto del Patrimonio Cultural de España (IPCE), Real Academia de Bellas Artes de San Fernando, Diputación Foral de Álava. Funding was provided by CTS Spain, SIT Spain, PC Conservation Products Spain, and canvas manufacturer Claessens in Belgium.
+[^1]: The main researcher on the project was Ana Macarrón and the following were part of the team: Ana Calvo, who started out as a member of the School of Arts at the Universidade Católica Portuguesa and then moved on to the Complutense University of Madrid (UCM), Spain; Rita Gil, technical support for the project at the UCM and coauthor of the database; Laura Fuster, Sofía Vicente, and Dolores Yusá from the Universitat Politècnica de València, Spain; Matteo Rossi-Doria, in private practice in Italy; Cecil K. Andersen and Mikkel Scharff from the KADK School of Conservation in Copenhagen, Denmark; Kate Seymour from the Stichting Restauratie Atelier Limburg (SRAL), Maastricht, Netherlands; Nicolas Bouillon and Fabien Forher from the Centre Interdiciplinaire de Conservation et de Restauration du Patrimoine (CICRP), Marseilles, France; Aurelia Chevalier, in private practice in France; Paul Ackroyd from the National Gallery, London; Joan Reifsnayder from ICOM-CC; and Marion Mecklenburg from the Smithsonian Institution. Spanish institutions that took part as contributors are Museo del Prado, Patrimonio Nacional, Museo Thyssen-Bornemisza, Instituto del Patrimonio Cultural de España (IPCE), Real Academia de Bellas Artes de San Fernando, and Diputación Foral de Álava. Funding was provided by CTS Spain, SIT Spain, PC Conservation Products Spain, and canvas manufacturer Claessens in Belgium.
 
 [^2]: I+D+i HAR 2011-24217.
 
@@ -178,6 +178,6 @@ It would be useful to continue testing to determine the different additives in t
 
 [^5]: We would like to thank the conservator-restorer of the Museo del Prado, María Álvarez Garcillán, for all the information she provided us on the condition of this painting.
 
-[^6]: For details of all materials see {% cite 'Fuster-López et al. 2017' %}.
+[^6]: For details of all materials, see {% cite 'Fuster-López et al. 2017' %}.
 
-[^7]: “Reinforcement Treatments of Canvas Paintings: Studio Cases, Evolution and Behavior,” Seminar presented at Universidad Complutense de Madrid y Museo Thyssen-Bornemisza, October 15, 2012.
+[^7]: “Reinforcement Treatments of Canvas Paintings: Studio Cases, Evolution and Behavior,” seminar presented at Complutense University of Madrid and Museo Thyssen-Bornemisza, October 15, 2012.
